// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Scrollable Component renders as expected with onUnmount event 1`] = `
<withAnimatable(FlatList)
  animation="fadeIn"
  data={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  delay={0}
  direction="normal"
  duration={250}
  iterationCount={1}
  iterationDelay={0}
  keyExtractor={[Function]}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  onUnmount={[Function]}
  renderItem={[Function]}
  useNativeDriver={false}
/>
`;

exports[`Testing Scrollable Component renders as expected with posts 1`] = `
<withAnimatable(FlatList)
  animation="fadeIn"
  data={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  delay={0}
  direction="normal"
  duration={250}
  iterationCount={1}
  iterationDelay={0}
  keyExtractor={[Function]}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  renderItem={[Function]}
  useNativeDriver={false}
/>
`;
